# Copyright 2024 TGS
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "xarray-integration"
version = "0.1.0"
description = "A project that integrates xarray"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
zarr = "^2.10.1"
xarray = "2023.12.0"
numpy = "<2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.3"
mypy = "^1.5"
isort = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xarray-integration = "src.xarray_integration:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[tool.mypy]
plugins = []